@@ -912,10 +912,9 @@ bool do_replay(display& disp, const gamemap& map, const game_data& gameinfo,
 				replay::throw_error(errbuf.str());
 			}
 
-			const bool ignore_zocs = u->second.get_ability_bool("skirmisher",u->first);
 			const bool teleport = u->second.get_ability_bool("teleport",u->first);
 
-			paths paths_list(map,state,gameinfo,units,src,teams,ignore_zocs,teleport,current_team);
+			paths paths_list(map,state,gameinfo,units,src,teams,false,teleport,current_team,NULL);
 
 			std::map<gamemap::location,paths::route>::iterator rt = paths_list.routes.find(dst);
 			if(rt == paths_list.routes.end()) {
