@@ -100,6 +100,7 @@ Version 1.3.1+svn:
    * Added some protection against crashing when attacking with units with 
      a high or negative amount of hitpoints (bug #6154, bug #7955, bug #8541) 
      -1 hitpoints will still cause a crash.
+   * fix skirmisher filtered by terrain not working properly.
 
 Version 1.3.1:
  * Campaignd
